--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,6 @@
 		<header class="min-h-screen bg-gray-900 leading-relaxed tracking-wide flex flex-col">
 
 		<!-- Hero Text -->
-
 		<div class="container mx-auto p-4 my-auto">
 				<h1 class="heading__primary my-8">
 					Hi! I'm <span class="text-yellow-500">{</span><span class="font-bold"> Rabson Phiri </span><span class="text-yellow-500">}</span>
@@ -282,11 +281,11 @@
                 <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" class="mt-6">
                     <div class="my-5 text-sm">
                         <label for="email" class="input-label">Email</label>
-                        <input type="email" id="email" class="input" placeholder="Your Email Address" />
+                        <input type="email" id="email" class="input" placeholder="Your Email Address" required/>
                     </div>
                     <div class="my-5 text-sm">
                         <label for="message" class="input-label">Message</label>
-                        <textarea id="message" class="input" placeholder="Type your message"></textarea>
+                        <textarea id="message" class="input" placeholder="Type your message" required></textarea>
                     </div>
 						  <div data-netlify-recaptcha="true"></div>
 
