update hero section text

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 				<div class="max-w-lg">
 					<p class="bg-yellow-500 p-3 mb-5 inline-block">Full Stack Web Developer</p>
 					<p class="hero__text mb-8">
-						I make beautiful and interactive websites and mobile apps with a focus on user engagement
+						I make beautiful and interactive websites with a focus on good user experience
 					</p>
 				</div>
 
@@ -57,7 +57,7 @@
 					class="btn btn__primary sm:mr-3 md:mr-4 lg:mr-5">
 						Contact Me
 					</button>
-					<a href="#" download="Rabson Phiri's Resume"
+					<a href="./docs/Rabson Phiri - Resume.pdf" download="Rabson Phiri - CV"
 					class="btn btn__transparent inline-block">
 						My Resume
 					</a>
