add Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,15 @@
 					'Noto Color Emoji';
 			}
 		</style>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-HPBEEESH5S"></script>
+		<script>
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+
+  			gtag('config', 'G-HPBEEESH5S');
+		</script>
 	</head>
 
 	<body>
