--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 					class="btn btn__primary sm:mr-3 md:mr-4 lg:mr-5">
 						Contact Me
 					</button>
-					<a href="./docs/Rabson Phiri - Resume.pdf" download="Rabson Phiri - CV"
+					<a href="./docs/Rabson_Phiri_Software_Engineer_Resume.pdf" download="Rabson_Phiri_Software_Engineer_Resume"
 					class="btn btn__transparent inline-block">
 						My Resume
 					</a>
