Update contact me button

--- a/public/index.html
+++ b/public/index.html
@@ -62,10 +62,10 @@
 					</p>
 				</div>
 
-					<button
-					class="btn btn__primary sm:mr-3 md:mr-4 lg:mr-5">
+					<a href="mailto:phirirabsonj@gmail.com"
+					class="btn btn__primary sm:mr-3 md:mr-4 lg:mr-5 inline-block">
 						Contact Me
-					</button>
+					<a/>
 					<a href="./docs/Rabson_Phiri_Software_Engineer_Resume.pdf" download="Rabson_Phiri_Software_Engineer_Resume"
 					class="btn btn__transparent inline-block">
 						My Resume
